[package]
name = "vantage"
version = "0.5.0"
edition = "2021"
description = "Web security scanner"
license = "MIT"
authors = ["husenet"]
repository = "https://github.com/husenet/vantage"
readme = "README.md"

[[bin]]
name = "vantage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
